- Conceal Trait

2.4.12
- add Pocket of Restoration
- Gravity Trait
- Moonwalk Trait
- Counter Strike Trait
- Pulling Trait
- Reprint Trait TODO patchouli
- add Soul Bound to dispell whitelist
- add Envy, Greed, Sloth, Lust, Gluttony to Ragnarok whitelist
- add Alex Caves compat
- add Ice and Fire compat

2.4.11
- add 9 curio items
- add 9 traits
- add witch droplet, booster potion, witch charge, eternal witch charge
- mobs at Lv.x will have only x% chance to have traits
- add region difficulty commands
- add mob trait commands
- add 2 enchantments for Repell trait and Split trait
- add difficulty related enchantments generation
- make fiery trait more lenient
- Repelling not targeting creative
- add config to allow exponential health/damage
- add config to allow disabling orbs
- add config to disable undying particles
- add config option to determine if death would reduce difficulty when keep inventory is true
- add dispell trait whitelist
- add trait candidate white list for non-enemies
- fix ender trait throwing error when teleport distance is 0
- fix ender trait teleporting to invalid position

2.4.10
- Fix regen calling potion test every tick
- Fix Invisible apply effects repeatedly
- Fix name plates being rendered from very far away
- Fix trait generation
- Add Cataclysm compat

2.4.9
- bosses will no longer have undead trait
- now trait whitelist/blacklist are all tag based
- allow config to disable all individual traits
- display spawn requirement
- improve texture

2.4.8
- Add 4 rings
- add 2 hand curio
- add witch wand
- no longer add level to name
- Make mobs drop more exp

2.4.7
- Add bottle of curse and bottle of sanity
- Add curse of 7 sins (7 items)
- Add patchouli for items
- Improve JEI tooltip visuals
- Fix soul burner effect never ends
- Increase level requirements for some traits

2.4.6
- Fix MobCapLootCondition
- Add weapon config
- Add entity config, remove entityMap from difficulty config
- Add multi-trait conditions JEI support and examples