@@ -1,7 +1,7 @@
-// 1.20.1	2023-11-26T20:17:12.351644	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (mob_effects), Tags (enchantments), Tags (traits), Patchouli Provider]
+// 1.20.1	2023-11-29T19:41:17.888752	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (mob_effects), Tags (enchantments), Tags (traits), Patchouli Provider]
 d70fdb86a9e889383707aa03fd2b7c8f3faa74cc assets/l2hostility/blockstates/hostility_spawner.json
-ceea415a2edd5b29858d28e83a03a313dad571f8 assets/l2hostility/lang/en_ud.json
-0db5fabd6d9323d6a6969d7e1e242fb11281ce32 assets/l2hostility/lang/en_us.json
+73e2090e77a878558fa908dd8ba49bc35fe2380e assets/l2hostility/lang/en_ud.json
+72d61e0edef306c7827600ab304a6c4ed5f938ee assets/l2hostility/lang/en_us.json
 55c31fd97776999c18d0f2503db0ab0f48f978ca assets/l2hostility/models/block/hostility_spawner.json
 de5c51bce5800765c4480502c92b16feb891e135 assets/l2hostility/models/block/hostility_spawner_activated.json
 4fc08943953876aaddfa8b72bdf177b446377ce1 assets/l2hostility/models/block/hostility_spawner_clear.json
