@@ -128,7 +128,7 @@
   "l2hostility.item.book.everything_use": "˙ǝɔuǝıɹǝdxǝ ɹǝʎɐןd buıʇsoɔ 'ʇuǝɯʇuɐɥɔuǝ ʇɐɥʇ ɟo ʞooq ɐ ǝʇɐɹǝuǝb oʇ ʞɔıןɔ ʇɥbıɹ uǝɥʇ 'ǝןqɐʇ ʇuǝɯʇuɐɥɔuǝ ɯoɹɟ ǝןqɐuıɐʇqo ʇuǝɯʇuɐɥɔuǝ uɐ ɟo ᗡI ɥʇıʍ ɯǝʇı sıɥʇ ǝɯɐuǝᴚ",
   "l2hostility.item.consumable.bottle_of_curse": "%s ʎq ʎʇןnɔıɟɟıp ɹǝʎɐןd ǝsɐǝɹɔuI",
   "l2hostility.item.consumable.bottle_of_sanity": "ʎʇןnɔıɟɟıp ɹǝʎɐןd ǝsɐq ןןɐ ɹɐǝןƆ",
-  "l2hostility.item.consumable.orb": "˙ʎןǝsıʍ ǝs∩ ˙ǝsɐq ɹnoʎ buıpןınq uǝɥʍ ןnɟǝs∩ ˙ǝɟɐs uoıʇɔǝs ʞunɥɔ ɐ ǝʞɐW",
+  "l2hostility.item.consumable.orb": "˙sןǝʌǝן ɥʇıʍ sqoɯ uʍɐds ɹǝbuoן ou suoıʇɔǝs ʞunɥɔ %sx%sx%s ǝʞɐW",
   "l2hostility.item.equipment.abrahadabra": "˙pɐǝʇsuı noʎ ʇǝbɹɐʇ ʇɐɥʇ sǝıɯǝuǝ buıpunoɹɹns oʇ ʇı ʎןddɐ 'noʎ uo ʇɔǝɟɟǝ ʇıɐɹʇ ɐ ʎןddɐ oʇ sǝıɹʇ ʇıɐɹʇ qoɯ ɐ uǝɥM",
   "l2hostility.item.equipment.curse_add_level": "ןǝʌǝן ʎʇןnɔıɟɟıp ɐɹʇxǝ %s uıɐ⅁",
   "l2hostility.item.equipment.curse_no_drop": "ʇooן ʎʇıןıʇsoɥ doɹp ʇou ןןıʍ ןןıʞ noʎ sqoW",
@@ -155,7 +155,7 @@
   "l2hostility.item.equipment.ring_of_ocean": "ʇǝʍ ǝq sʎɐʍןɐ ןןıʍ noʎ",
   "l2hostility.item.equipment.ring_of_reflection": "˙pɐǝʇsuı noʎ ʇǝbɹɐʇ ʇɐɥʇ sǝıɯǝuǝ buıpunoɹɹns oʇ ʇı ʎןddɐ 'noʎ uo ʇɔǝɟɟǝ ǝʌıʇɐbǝu ɐ ʎןddɐ oʇ sǝıɹʇ ʇıɐɹʇ qoɯ ɐ uǝɥM",
   "l2hostility.item.equipment.witch_wand": "˙sʇıɐɹʇ uoıʇod ɯopuɐɹ ɯoɹɟ pǝʇɔǝןǝs sǝdʎ⟘ ˙ʞɔıןɔ ʇɥbıɹ uo suoıʇod ɥsɐןds ɯopuɐɹ ʍoɹɥ⟘",
-  "l2hostility.item.spawner": "ǝɟɐs uoıʇɔǝs ʞunɥɔ ɐ ǝʞɐɯ oʇ ןןɐ ɯǝɥʇ ןןıʞ ˙sqoɯ buoɹʇs uoɯɯnS",
+  "l2hostility.item.spawner": "sןǝʌǝן ɥʇıʍ sqoɯ uʍɐds ɹǝbuoן ou uoıʇɔǝs ʞunɥɔ ɐ ǝʞɐɯ oʇ ןןɐ ɯǝɥʇ ןןıʞ ˙sqoɯ buoɹʇs uoɯɯnS",
   "l2hostility.item.wand.adder": "˙uoıʇɔǝɹıp ǝʇısoddo uı ʇɔǝןǝs oʇ ʇɟıɥs ssǝɹԀ ˙ʞuɐɹ ʇıɐɹʇ ʇɔǝןǝs oʇ sqoɯ ʞɔıןɔ ʇɥbıᴚ ˙ʇıɐɹʇ ʇɔǝןǝs oʇ sʞɔoןq ʞɔıןɔ ʇɥbıᴚ",
   "l2hostility.item.wand.ai": "˙IⱯ qoɯ ǝɹoʇsǝɹ ɹo ǝʌoɯǝɹ oʇ ʞɔıןɔ ʇɥbıᴚ",
   "l2hostility.item.wand.equipment": "˙nuǝɯ ʇuǝɯdınbǝ qoɯ uǝdo oʇ ʞɔıןɔ ʇɥbıᴚ",
