@@ -128,7 +128,7 @@
   "l2hostility.item.book.everything_use": "Rename this item with ID of an enchantment obtainable from enchantment table, then right click to generate a book of that enchantment, costing player experience.",
   "l2hostility.item.consumable.bottle_of_curse": "Increase player difficulty by %s",
   "l2hostility.item.consumable.bottle_of_sanity": "Clear all base player difficulty",
-  "l2hostility.item.consumable.orb": "Make a chunk section safe. Useful when building your base. Use wisely.",
+  "l2hostility.item.consumable.orb": "Make %sx%sx%s chunk sections no longer spawn mobs with levels.",
   "l2hostility.item.equipment.abrahadabra": "When a mob trait tries to apply a trait effect on you, apply it to surrounding enemies that target you instead.",
   "l2hostility.item.equipment.curse_add_level": "Gain %s extra difficulty level",
   "l2hostility.item.equipment.curse_no_drop": "Mobs you kill will not drop hostility loot",
@@ -155,7 +155,7 @@
   "l2hostility.item.equipment.ring_of_ocean": "You will always be wet",
   "l2hostility.item.equipment.ring_of_reflection": "When a mob trait tries to apply a negative effect on you, apply it to surrounding enemies that target you instead.",
   "l2hostility.item.equipment.witch_wand": "Throw random splash potions on right click. Types selected from random potion traits.",
-  "l2hostility.item.spawner": "Summon strong mobs. Kill them all to make a chunk section safe",
+  "l2hostility.item.spawner": "Summon strong mobs. Kill them all to make a chunk section no longer spawn mobs with levels",
   "l2hostility.item.wand.adder": "Right click blocks to select trait. Right click mobs to select trait rank. Press shift to select in opposite direction.",
   "l2hostility.item.wand.ai": "Right click to remove or restore mob AI.",
   "l2hostility.item.wand.equipment": "Right click to open mob equipment menu.",
