@@ -1,0 +1,9 @@
+{
+  "values": [
+    "minecraft:thorns",
+    {
+      "id": "l2complements:soul_flame",
+      "required": false
+    }
+  ]
+}
