@@ -1,5 +1,6 @@
 package dev.xkmc.l2hostility.init.data;
 
+import dev.xkmc.l2complements.init.data.DamageTypeGen;
 import dev.xkmc.l2damagetracker.contents.damage.DamageTypeRoot;
 import dev.xkmc.l2damagetracker.contents.damage.DamageTypeWrapper;
 import dev.xkmc.l2damagetracker.contents.damage.DamageWrapperTagProvider;
@@ -16,8 +17,10 @@ import net.minecraft.data.worldgen.BootstapContext;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.DamageTypeTags;
+import net.minecraft.tags.TagKey;
 import net.minecraft.world.damagesource.DamageScaling;
 import net.minecraft.world.damagesource.DamageType;
+import net.minecraft.world.damagesource.DamageTypes;
 import net.minecraft.world.level.Level;
 import net.minecraftforge.common.data.ExistingFileHelper;
 
@@ -39,6 +42,8 @@ public class LHDamageTypes extends DamageTypeAndTagsGen {
 	protected static final List<DamageTypeWrapper> LIST = new ArrayList<>();
 
 	public static final ResourceKey<DamageType> KILLER_AURA = create("killer_aura");
+
+	public static final TagKey<DamageType> IGNORE_SCALING = TagKey.create(Registries.DAMAGE_TYPE, new ResourceLocation(L2Hostility.MODID, "ignore_scaling"));
 
 	public LHDamageTypes(PackOutput output,
 						 CompletableFuture<HolderLookup.Provider> pvd,
@@ -64,6 +69,7 @@ public class LHDamageTypes extends DamageTypeAndTagsGen {
 		for (DamageTypeWrapper wrapper : LIST) {
 			wrapper.gen(pvd, lookup);
 		}
+		pvd.tag(IGNORE_SCALING).add(DamageTypes.THORNS).addOptional(DamageTypeGen.SOUL_FLAME.location());
 	}
 
 	public static Holder<DamageType> forKey(Level level, ResourceKey<DamageType> key) {
