@@ -59,7 +59,7 @@
 		"target": "右键2个怪物让它们互相攻击"
 	  },
 	  "consumable": {
-		"orb": "让一个子区块变得安全。适合用于建家。获取不易，请谨慎使用",
+		"orb": "让%sx%sx%s的子区块不再生成有等级的怪物",
 		"bottle_of_curse": "玩家难度等级提升%s",
 		"bottle_of_sanity": "清空玩家基础难度等级"
 	  },
@@ -99,7 +99,7 @@
 		"everything_shift": "手持这个物品潜行右键把这个物品变成包含所有可以从附魔台中产出的附魔的附魔书",
 		"everything_use": "把这个物品重命名成可以从附魔台中产出的附魔的ID，然后手持右键消耗经验产出该附魔"
 	  },
-	  "spawner": "召唤强力怪物。击败它们能让当前子区块变得安全"
+	  "spawner": "召唤强力怪物。击败它们能让当前子区块不再生成有等级的怪物"
 	},
 	"msg": {
 	  "ai": "配置实体%s：将NoAI设为%s",
